# Portfolio_Website

./: 404.html  Cargo.toml  Dioxus.toml  README.md  index.html
.github/workflows/: deploy.yml
assets/: 20220223_Prescott_Eagle_Sat-05098-8a533b604e76995b.jpg.br  20220224_Eagle_Sat_Lab_PC-06036-c9d324b0302c9583.jpg.br  20220224_Eagle_Sat_Lab_PC-06309-7d39a58213cc5814.jpg.br  20220224_Eagle_Sat_Lab_PC-06356-7ee994ca6376a770.jpg.br  20220224_Eagle_Sat_Lab_PC-06492-bf9c6eafb79e2fcf.jpg.br  JJ-b6bbc07d6ac18271.svg.br  JJ-fbcdb752d3eb87c4.ico.br  JJohnson_Resume_Website-93b082539c0d4086.pdf.br  Sneezy-c57e8aeac73f4a46.jpg.br  about_me-31d558c8f398ced3.css  about_me-31d558c8f398ced3.css.br  contact-3fe5ba5a42cf5ca4.css  contact-3fe5ba5a42cf5ca4.css.br  cubic16-300ce467a6b23a8c.png.br  drip-973d72b1a2455cc5.png.br  eaglesat-2b85f78f8928288c.jpg.br  footer-05725897bd370686.css  footer-05725897bd370686.css.br  github-4027fc2f60c90a04.svg.br  home-7beaae76ae522180.css  home-7beaae76ae522180.css.br  host-43d95889574be9ec.png.br  linkedin-28cd935e29c365a3.svg.br  main-efb754088074ae1e.css  main-efb754088074ae1e.css.br  modem-c2ca0b6db5efe193.png.br  modifi-3effe18137b0fbb0.png.br  navbar-4eca0cb33cde88c1.css  navbar-4eca0cb33cde88c1.css.br  portfolio_website-3f23c12fbcb37d98.js  portfolio_website-3f23c12fbcb37d98.js.br  portfolio_website_bg-22e6b1ec04dad704.wasm  portfolio_website_bg-22e6b1ec04dad704.wasm.br  portfolio_website_bg-ff66d0c84da29f9a.wasm  portfolio_website_bg-ff66d0c84da29f9a.wasm.br  projects-f6f296c9121b2cc1.css  projects-f6f296c9121b2cc1.css.br  resume-def213837dd75c2d.css  resume-def213837dd75c2d.css.br  scrolling_image-bb76d1df6fed4d9e.css  (+1 more)
assets/styling/: about_me.css  contact.css  footer.css  home.css  main.css  navbar.css  projects.css  resume.css  scrolling_image.css
src/: main.rs
src/components/: footer.rs  mod.rs  project_card.rs  resume.rs  scrolling_image_bar.rs
src/views/: about_me.rs  (+6 more)
